--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 html {
   background: url('http://apexassisting.com/wp-content/uploads/2013/11/blue-hexagons-seamless-pattern-2488.png') repeat fixed;
-  height: 100%;
+  min-height: 100vh;
 }
 
 header {
@@ -17,6 +17,8 @@ header {
     border-bottom-left-radius: 5px;
     a {
       color: #fff;
+      border-right: 2px solid;
+      padding: 0 10px;
     }
   }
   img {
@@ -35,7 +37,7 @@ body {
   
 }
 
-section {
+main {
   margin: 0 auto 0 auto;
   background-color: #cfe4f9;
   padding: 20px 30px 20px 30px;
@@ -53,6 +55,7 @@ a {
   color: #2b7ac4;
 }
 
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -68,11 +71,23 @@ ul {
     background-color: #f7faff;
     padding: 20px;
     border-radius: 5px;
-    margin: 0 15px 15px 0;
-    width: 250px;
-    height: 250px;
-    display: inline-block;
   }
+}
+
+.contents {
+  display: flex;
+  flex-direction: column;
+}
+
+.contents-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.content-item {
+  
 }
 
 button {
@@ -83,4 +98,15 @@ button {
   color: #2b7ac4;
   border-radius: 5px;
   display: inline-block;
+}
+
+.vote {
+  background-color: #2b7ac4;
+  border: 2px solid;
+  width: 50px;
+  height: 50px;
+  color: #fff;
+  border-radius: 5px;
+  display: inline-block;
+  font-size: 40px;
 }
