--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,112 +1,233 @@
-html {
-  background: url('http://apexassisting.com/wp-content/uploads/2013/11/blue-hexagons-seamless-pattern-2488.png') repeat fixed;
-  min-height: 100vh;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-header {
-  background-color: #cfe4f9;
-  width: 100%;
-  border-bottom: 10px solid #559adb;
-  nav {
-    float: right;
-    text-align: right;
-    background-color: #559adb;
-    color: #fff;
-    padding: 14px;
-    font-size: 15px;
-    border-bottom-left-radius: 5px;
-    a {
-      color: #fff;
-      border-right: 2px solid;
-      padding: 0 10px;
-    }
-  }
-  img {
-    height: 150px;
-    margin: 10px 0 10px 30px;
-  }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-  font-family: Verdana, sans-serif;
-  width: 100%;
-  margin: 0;
-  z-index: 1;
-  position: absolute;
-  background-color: rgba(239,247,255, 0.7);
-  
+	line-height: 1;
 }
-
-main {
-  margin: 0 auto 0 auto;
-  background-color: #cfe4f9;
-  padding: 20px 30px 20px 30px;
-  width: 75%;
+ol, ul {
+	list-style: none;
 }
-
-footer {
-  height: 50px;
-  background-color: #559ADB;
-  margin: 0;
+blockquote, q {
+	quotes: none;
 }
-
-a {
-  text-decoration: none;
-  color: #2b7ac4;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
-
-
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
 
-ul {
-  padding: 0;
-  list-style-type: none;
+/* end of CSS reset */
+
+
+html {
+  background: url('http://apexassisting.com/wp-content/uploads/2013/11/blue-hexagons-seamless-pattern-2488.png') repeat fixed;
+  box-sizing: border-box;
   width: 100%;
-  margin: 0 auto 0 auto;
+  height: 100%;
+  font-family: Verdana, sans-serif;
   
-  li {
-    background-color: #f7faff;
-    padding: 20px;
-    border-radius: 5px;
+  * {
+    box-sizing: inherit;
+  }
+    
+  a {
+    text-decoration: none;
+    color: #559adb;
+    font-weight: regular;
+  }
+  
+  a:hover {
+    color: #1768b5;
+  }
+  
+  p {
+    font-size: 0.7em;
+  }
+  
+  h1, h2, h3, h4, h5 {
+    color: #559adb;
+    margin: 0.5em 0;
+  }
+  
+  h2 {
+    font-size: 1.4em;
+    margin: 1em 0 0.7em 0;
+  }
+  
+  .wrapper {
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    position: absolute;
+    background-color: rgba(239,247,255, 0.7);
+      
+    header {
+      background-color: #cfe4f9;
+      border-bottom: 10px solid #559adb;
+      display: flex;
+      justify-content: space-between;
+      
+      .logo {
+        height: 25vh;
+        margin: 1.4em 0 0 1.8em;
+      } 
+      
+      .userLogin {
+        min-width: 15vw;
+        background-color: #559adb;
+        color: #fff;
+        padding: 14px;
+        font-size: 1em;
+        border-bottom-left-radius: 5px;
+        align-self: flex-start;
+        
+        a {
+          color: #fff;
+          border-right: 2px solid;
+          padding: 0 10px;
+        }
+      }
+    }
+    
+    main {
+      background-color: #cfe4f9;
+      padding: 2em;
+      align-self: center;
+      width: 85vw;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      
+      .sort-nav {
+        a {
+          font-size: 0.8em;
+          border-left: 1px solid;
+          padding: 0 1em;
+        }
+      }
+      
+      .contents-list {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-content: space-around;
+        
+        button {
+          background-color: transparent;
+          border: none;
+          font-size: 200%;
+          padding: 0 0 0 0;
+          color: #559adb;
+        }
+        
+        button:hover {
+          color: #1768b5;
+        }
+        
+        .content-item {
+          width: 32%;
+          // flex: 1;
+          display: flex;
+          margin-bottom: 1em;
+          justify-content: space-between;
+          
+          .postInfo {
+            width: 75%;
+            line-height: 1.3em;
+            
+            h3 {
+              font-weight: bold;
+              margin: 0 0 0.3em 0;
+            }
+            
+          }
+          
+          .votes {
+            order: -1;
+            width: 25%;
+            margin-right: 2em;
+            display: flex;
+            flex-direction: column;
+            
+            .arrowUp {
+              order: 1;
+              align-self: center;
+            }
+            
+            p {
+              font-size: 0.8em;
+              order: 2;
+              align-self: center;
+              text-align: center;
+              line-height: 1.3em;
+              color: #559adb;
+            }
+            
+            .arrowDown {
+              order: 3;
+              align-self: center;
+            }
+          }
+        }
+      }
+      
+      li {
+        background-color: #f7faff;
+        padding: 20px;
+        border-radius: 10px;
+      }
+    }
+    
+    footer {
+      height: 50px;
+      background-color: #559ADB;
+      color: #fff;
+      padding: 2em 0 2em 4em;
+      font-size: 0.7em;
+    }
   }
 }
 
-.contents {
-  display: flex;
-  flex-direction: column;
-}
+/* Media queries */
 
-.contents-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.content-item {
+@media all and (min-width: 600px) {
   
 }
 
-button {
-  background-color: #fff;
-  border: 2px solid #2b7ac4;
-  width: 100px;
-  height: 30px;
-  color: #2b7ac4;
-  border-radius: 5px;
-  display: inline-block;
-}
+@media all and (min-width: 800px) {
 
-.vote {
-  background-color: #2b7ac4;
-  border: 2px solid;
-  width: 50px;
-  height: 50px;
-  color: #fff;
-  border-radius: 5px;
-  display: inline-block;
-  font-size: 40px;
 }
