--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,6 +85,21 @@ html {
     margin: 1em 0 0.7em 0;
   }
   
+  button {
+    font-size: 1em;
+    padding: 1em;
+    background-color: #559adb;
+    color: #fff;
+    border: 3px solid white;
+    border-radius: 0.8em;
+    outline: none;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #1768b5;
+  }
+  
   .wrapper {
     min-height: 100%;
     width: 100%;
@@ -101,8 +116,8 @@ html {
       justify-content: space-between;
       
       .logo {
-        height: 25vh;
-        margin: 1.4em 0 0 1.8em;
+        height: 150px;
+        margin: 1.4em 0 0.5em 1.8em;
       } 
       
       .userLogin {
@@ -126,12 +141,16 @@ html {
       background-color: #cfe4f9;
       padding: 2em;
       align-self: center;
-      width: 85vw;
+      width: 82vw;
       flex: 1;
       display: flex;
       flex-direction: column;
       
       .sort-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        
         a {
           font-size: 0.8em;
           border-left: 1px solid;
@@ -144,13 +163,14 @@ html {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        align-content: space-around;
         
         button {
           background-color: transparent;
           border: none;
+          outline: none;
           font-size: 200%;
           padding: 0 0 0 0;
+          line-height: 0;
           color: #559adb;
         }
         
@@ -205,10 +225,56 @@ html {
         }
       }
       
-      li {
+      li, .form, .content {
         background-color: #f7faff;
         padding: 20px;
         border-radius: 10px;
+      }
+        
+      .form {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        
+        h2 {
+          font-size: 1.7em;
+          align-self: center;
+        }
+        
+        .form-wrapper {
+          width: 40%;
+          display: flex;
+          flex-direction: column;
+          // align-content: stretch;
+          
+          form {
+            display: flex;
+            flex-direction: column;
+            // align-content: stretch;
+            
+            input {
+              height: 3em;
+              margin-bottom: 0.5em;
+              padding: 10px;
+              font-size: 1em;
+              border: none;
+            }
+            
+            .buttonSet {
+              display: flex;
+              justify-content: space-between;
+              margin-top: 0.5em;
+              
+              .suggest-title {
+                flex-basis: 49%;
+              }
+              
+              .create-post-button {
+                flex-basis: 49%;
+              }
+            }
+          }
+        } 
       }
     }
     
@@ -217,9 +283,33 @@ html {
       background-color: #559ADB;
       color: #fff;
       padding: 2em 0 2em 4em;
-      font-size: 0.7em;
+      font-size: 0.9em;
     }
   }
+}
+
+@keyframes spin {
+  from {
+    transform: rotateZ(0);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+#spinner {
+  display: none;
+  vertical-align: bottom;
+  border: 3px solid #559adb;
+  border-radius: 50%;
+  border-top-color: transparent;
+  border-bottom-color:transparent;
+  width: 15px;
+  height: 15px;
+  animation: spin;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 /* Media queries */
